alteracao em css, fontes, imagens, transform, shadow e images

--- a/startbootstrap-grayscale-gh-pages/index.html
+++ b/startbootstrap-grayscale-gh-pages/index.html
@@ -83,7 +83,7 @@
     <div class='container'>
       <div class='row'>
         <div class='col-md-8 offset-md-2 text-center'>
-          <h1>Vídeos</h1>
+          <h1>Vídeos Harry Potter</h1>
         <video id='video' poster='img/logan.jpg'width="600" controls>
         <!--
           <source src='video/logan.mp4' type="video/mp4"/>
