Modifiquei o tamanho da imagem png do vídeo e alterei o nome da seção de vídeo

--- a/startbootstrap-grayscale-gh-pages/index.html
+++ b/startbootstrap-grayscale-gh-pages/index.html
@@ -59,7 +59,7 @@
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0 text-uppercase">Zimbabue</h1>
         <h2 class="text-white-50 mx-auto mt-2 mb-5">Unidade, Liberdade, Trabalho</h2>
-        <a href="#about" class="btn btn-primary js-scroll-trigger">Get Started</a>
+        <a href="#about" class="btn btn-primary js-scroll-trigger">Vamos Começar!</a>
       </div>
     </div>
   </header>
@@ -83,7 +83,7 @@
     <div class='container'>
       <div class='row'>
         <div class='col-md-8 offset-md-2 text-center'>
-          <h1>Vídeos Harry Potter</h1>
+          <h1>Veja Vídeos</h1>
         <video id='video' poster='img/logan.jpg'width="600" controls>
         <!--
           <source src='video/logan.mp4' type="video/mp4"/>
