ateraçoes feitas no player add <div> no player index e no mystyle #video-control

--- a/startbootstrap-grayscale-gh-pages/index.html
+++ b/startbootstrap-grayscale-gh-pages/index.html
@@ -92,21 +92,23 @@
 
         <h3 id='video_title'></h3>
         <br>
-		<a href="javascript:prevvideo()">
-			<i class="fa fa-2x fa-step-backward"></i>
-		</a>
-        <a href="javascript:playvideo()">
-            <i class="fa fa-2x fa-play"></i>
-        </a>
-        <a href="javascript:pausevideo()">
-          <i class="fa fa-2x fa-pause"></i>
-        </a>
-        <a href="javascript:stopvideo()">
-          <i class="fa fa-2x fa-stop"></i>
-        </a>
-        <a href="javascript:nextvideo()">
-          <i class="fa fa-2x fa-step-forward"></i>
-        </a>
+        <div id="video-control">
+          <a href="javascript:prevvideo()">
+            <i class="fa fa-2x fa-step-backward"></i>
+          </a>
+          <a href="javascript:playvideo()">
+              <i class="fa fa-2x fa-play"></i>
+          </a>
+          <a href="javascript:pausevideo()">
+            <i class="fa fa-2x fa-pause"></i>
+          </a>
+          <a href="javascript:stopvideo()">
+            <i class="fa fa-2x fa-stop"></i>
+          </a>
+          <a href="javascript:nextvideo()">
+            <i class="fa fa-2x fa-step-forward"></i>
+          </a>
+        </div>
         <hr>
 		</div>
       </div>
