Ultimos ajustes antes de enviar para avaliação, atualizer os efeitos dos players de audio e video e arrumei a borda do video.

--- a/startbootstrap-grayscale-gh-pages/index.html
+++ b/startbootstrap-grayscale-gh-pages/index.html
@@ -122,29 +122,30 @@
 				<h1>Áudio</h1>
 					<h2 id='audio_title'></h2>
 					<audio id='audio' width="600" height="400">
-					<!--
-					<source src='audio/audio1.mp3' type="audio/mp3">
-					-->
+						<!--
+						<source src='audio/audio1.mp3' type="audio/mp3">
+						-->
 					</audio>
 					<br>
-					<div id="repro_a"></div>
-					<a href="javascript:prevaudio()">
-						<i class="fa fa-2x fa-step-backward"></i>
-					</a>
-					<a href="javascript:playaudio()">
-						<i class="fa fa-2x fa-play"></i>
-					</a>
-					<a href="javascript:pauseaudio()">
-						 <i class="fa fa-2x fa-pause"></i>
-					</a>
-					 <a href="javascript:stopaudio()">
-						 <i class="fa fa-2x fa-stop"></i>
-					</a>
-					<a href="javascript:nextaudio()">
-						 <i class="fa fa-2x fa-step-forward"></i>
-					 </a>
-					<input type='range' id='setvolume' step='0.1' min='0' max='1' value='0.5'
-					onchange='setVolumeAudio()'><span id='volpor'></span>
+					<div id="repro_a">
+						<a href="javascript:prevaudio()">
+							<i class="fa fa-2x fa-step-backward"></i>
+						</a>
+						<a href="javascript:playaudio()">
+							<i class="fa fa-2x fa-play"></i>
+						</a>
+						<a href="javascript:pauseaudio()">
+							 <i class="fa fa-2x fa-pause"></i>
+						</a>
+						 <a href="javascript:stopaudio()">
+							 <i class="fa fa-2x fa-stop"></i>
+						</a>
+						<a href="javascript:nextaudio()">
+							 <i class="fa fa-2x fa-step-forward"></i>
+						 </a>
+						<input type='range' id='setvolume' step='0.1' min='0' max='1' value='0.5'
+						onchange='setVolumeAudio()'><span id='volpor'></span>
+					</div>
 			</div>
 		</div>
 	</div>
