--- a/startbootstrap-grayscale-gh-pages/index.html
+++ b/startbootstrap-grayscale-gh-pages/index.html
@@ -84,7 +84,7 @@
       <div class='row'>
         <div class='col-md-8 offset-md-2 text-center'>
           <h1>Veja Vídeos</h1>
-        <video id='video' poster='img/logan.jpg'width="600" controls>
+        <video id='video' poster='img/flagZimbabwe.jpg'width="600" height="302.5">
         <!--
           <source src='video/logan.mp4' type="video/mp4"/>
           -->
@@ -117,7 +117,7 @@
   </section>
   <section id='audios'>
 	<div class='conatiner'>
-		<div class='row'>
+		<div class='row' id="musica">
 			<div class='col-md-8 offset-md-2 text-center'>
 				<h1>Áudio</h1>
 					<h2 id='audio_title'></h2>
@@ -144,7 +144,8 @@
 							 <i class="fa fa-2x fa-step-forward"></i>
 						 </a>
 						<input type='range' id='setvolume' step='0.1' min='0' max='1' value='0.5'
-						onchange='setVolumeAudio()'><span id='volpor'></span>
+            onchange='setVolumeAudio()'><span id='volpor'></span>
+            <div id="repro_audio"></div>
 					</div>
 			</div>
 		</div>
@@ -157,7 +158,53 @@
     <div class="container">
 
       <!-- Featured Project Row -->
-      <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+      <div id="comidas" class="carousel slide" data-ride="carousel">
+        <ul class="carousel-indicators">
+          <li data-target="#comidas" data-slide-to="0" class="active"></li>
+          <li data-target="#comidas" data-slide-to="1"></li>
+          <li data-target="#comidas" data-slide-to="2"></li>
+          <li data-target="#comidas" data-slide-to="3"></li>
+        </ul>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="img/sadza.jpg" alt="Sadza" width="1100" height="500">
+            <div class="carousel-caption">
+              <h3 class="h3">Sadza</h3>
+              <p class="leg">É um tipo de purê de milho ou arroz. Para comer esse prato não se usa talher. 
+                O mingau é acompanhado de legumes.</p>
+            </div>   
+          </div>
+          <div class="carousel-item">
+            <img src="img/Porridge.jpg" alt="Porridge" width="1100" height="500">
+            <div class="carousel-caption">
+              <h3 class="h3">Porridge</h3>
+              <p class="leg">É o mesmo tipo de mingau do Sadza, mas na versão doce. 
+                É comido no café da manhã.</p>
+            </div>   
+          </div>
+          <div class="carousel-item">
+            <img src="img/Mapone-Worm.jpg" alt="Mapone-Worm" width="1100" height="500">
+            <div class="carousel-caption">
+              <h3 class="h3">Mapone-Worm</h3><br>
+              <p class="leg">É uma carne de lagarta, que é muito servida em festas.</p>
+            </div>  
+          </div>
+          <div class="carousel-item">
+              <img src="img/matembo.jpg" alt="Matembo" width="1100" height="500">
+              <div class="carousel-caption">
+                <h3 class="h3">Matembo</h3><br>
+                <p class="leg">É um tipo de peixe cru ao molho.</p>
+          </div>    
+        </div>
+        <a class="carousel-control-prev" href="#comidas" data-slide="prev">
+          <span class="carousel-control-prev-icon"></span>
+        </a>
+        <a class="carousel-control-next" href="#comidas" data-slide="next">
+          <span class="carousel-control-next-icon"></span>
+        </a>
+      </div>
+      
+      <!--<div class="row align-items-center no-gutters mb-4 mb-lg-5">
         <div class="col-xl-8 col-lg-7 col-sm-6">
           <img class="img-fluid mb-3 mb-lg-0" src="img/bg-masthead.jpg" alt="">
         </div>
@@ -167,7 +214,7 @@
             <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
           </div>
         </div>
-      </div>
+      </div>-->
 
       <!-- Project One Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
