--- a/startbootstrap-grayscale-gh-pages/index.html
+++ b/startbootstrap-grayscale-gh-pages/index.html
@@ -68,13 +68,15 @@
   <section id="about" class="about-section text-center">
     <div class="container">
       <div class="row">
-        <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
-          <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-            <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+        <div class="col-lg-12 mx-auto">
+          <h2 class="text-white mb-8">Zimbabwe</h2>
+          <p class="text-white-50" align="justify">Situado na porção sudeste do continente africano, o território do Zimbábue não possui saída para o mar e limita-se com Moçambique (a nordeste e a leste), África do Sul (ao sul), Botswana (a sudoeste e a oeste) e Zâmbia (ao norte e a noroeste). O nome do país significa “casa de pedra”, no dialeto chona.
+            Com predominância de clima tropical, Zimbábue possui belas paisagens naturais, sobretudo nas savanas que abrigam diversos animais selvagens. O solo é fértil, fato que possibilita a prática da agricultura. Os principais produtos cultivados são milho, tabaco, algodão, café, cana-de-açúcar, entre outros. Outra importante atividade econômica é a mineração, pois o país possui grandes reservas de ouro, níquel, amianto, etc.
+            Apesar desse potencial econômico, a nação sofre com diversos problemas econômicos, sociais e políticos. A maioria da população vive abaixo da linha de pobreza, ou seja, com menos de 1,25 dólar por dia; mais de 40% dos zimbabuanos são subnutridos; e muitos habitantes são portadores do vírus HIV, fato que reflete diretamente na baixa expectativa de vida (47 anos).
+            De acordo com relatório divulgado em 2010 pela Organização das Nações Unidas (ONU), o Índice de Desenvolvimento Humano (IDH) do Zimbábue é de apenas 0,140, sendo a pior média entre os 169 países que compõem o ranking mundial.</p>
         </div>
       </div>
-      <img src="img/ipad.png" class="img-fluid" alt="">
+
     </div>
   </section>
 
@@ -82,7 +84,7 @@
   <section id='videos'>
     <div class='container'>
       <div class='row'>
-        <div class='col-md-8 offset-md-2 text-center'>
+        <div class='col-md-8 offset-md-2 text-center' id="vidio">
           <h1>Veja Vídeos</h1>
         <video id='video' poster='img/flagZimbabwe.jpg'width="600" height="302.5">
         <!--
@@ -167,7 +169,7 @@
         </ul>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/sadza.jpg" alt="Sadza" width="1100" height="500">
+            <img src="img/sadza.jpg" alt="Sadza" width="1110" height="500">
             <div class="carousel-caption">
               <h3 class="h3">Sadza</h3>
               <p class="leg">É um tipo de purê de milho ou arroz. Para comer esse prato não se usa talher. 
@@ -175,7 +177,7 @@
             </div>   
           </div>
           <div class="carousel-item">
-            <img src="img/Porridge.jpg" alt="Porridge" width="1100" height="500">
+            <img src="img/Porridge.jpg" alt="Porridge" width="1110" height="500">
             <div class="carousel-caption">
               <h3 class="h3">Porridge</h3>
               <p class="leg">É o mesmo tipo de mingau do Sadza, mas na versão doce. 
@@ -183,14 +185,14 @@
             </div>   
           </div>
           <div class="carousel-item">
-            <img src="img/Mapone-Worm.jpg" alt="Mapone-Worm" width="1100" height="500">
+            <img src="img/Mapone-Worm.jpg" alt="Mapone-Worm" width="1110" height="500">
             <div class="carousel-caption">
               <h3 class="h3">Mapone-Worm</h3><br>
               <p class="leg">É uma carne de lagarta, que é muito servida em festas.</p>
             </div>  
           </div>
           <div class="carousel-item">
-              <img src="img/matembo.jpg" alt="Matembo" width="1100" height="500">
+              <img src="img/Matembo2.jpg" alt="Matembo" width="1110" height="500">
               <div class="carousel-caption">
                 <h3 class="h3">Matembo</h3><br>
                 <p class="leg">É um tipo de peixe cru ao molho.</p>
