atualização e desenho da fruta

--- a/Projeto Smile/index.html
+++ b/Projeto Smile/index.html
@@ -7,8 +7,8 @@
 
         <script type="text/javascript" src="js/rect.js"></script>
         <script  type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-
         <script type="text/javascript" src="js/smile.js"></script>
+        <script type="text/javascript" src="js/fruit.js"></script>
         <script type="text/javascript" src="js/canvas_app.js"></script>
         <style>
             #canvas{
